--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </main>
     <section class="propertiesSection">
         <h2 class="propertiesTitle">Properties</h2>
-        <img src="./assets/Rectangle.png" alt="Rectangle" class="separationRectangle">
+        <img src="./../assets/Rectangle.png" alt="Rectangle" class="separationRectangle">
         <p class="propertiesSubTitle">This is where your life <span style="color: var(--mainColor);">reboots</span></p>
         <div class="propertiesBox">
         </div>
