--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <option value="loft">Loft</option>
                         </select>
                     </div>
-                    <div class="roomBox">
+                    <div class="roomBox" id="roomId">
                         <h3 class="formTitle">Rooms <span style="color: var(--mainColor);">*</span></h3>
                         <select name="Room number" id="roomInput" class="selectorStyle innerShadow">
                             <option value="t1">T1</option>
