--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="landingPageFilter"></div>
         </div>
         <h2 class="mainSectionTitle">Real estate propositions <span style="color: var(--mainColor);">coded</span> just for <span style="color: var(--mainColor);">you</span></h2>
-        <div class="sellSectionBox outerShadow hidden" id="sellSectionBox">
+        <div class="sellSectionBox outerShadow hidden scoller" id="sellSectionBox">
             <div class="leftSectionBox">
                 <div class="titleBox">
                     <h3 class="formTitle">Title <span style="color: var(--mainColor);">*</span></h3>
@@ -80,7 +80,8 @@
                 </div>
                 <div class="descFieldBox">
                     <h3 class="formTitle">Description <span style="color: var(--mainColor);">*</span></h3>
-                    <input type="text" placeholder="Enter the description" class="descInput innerShadow" id="descInput">
+                    <textarea placeholder="Enter the description" class="descInput innerShadow outerSolidShadow" id="descInput"></textarea>
+
                 </div>
                 <button class="saveButton outerSolidShadow" id="saveButton">Save Property</button>
             </div>
